# tinyspider

./: CMakeLists.txt  LICENSE  README.md
include/: findlink.hpp  linkbufformultithread.h
src/: findlink.cpp  linkbufformultithread.cpp  main.cpp
